fix: updated layout navigation to be responsive, collapses navigation after lg breakpoint. also made sidebar and navbar stickyish

--- a/clients/projects/office/src/app/modules/application/pages/application/application.component.scss
+++ b/clients/projects/office/src/app/modules/application/pages/application/application.component.scss
@@ -10,7 +10,8 @@ nz-header {
 
 nz-content {
   margin: 0 16px;
-  min-height: calc(100vh - 64px);
+  height: calc(100vh - 64px - 70px);
+  overflow-y: auto;
 }
 
 nz-breadcrumb {
@@ -20,7 +21,6 @@ nz-breadcrumb {
 .inner-content {
   padding: 24px;
   background: #fff;
-  min-height: 300px
 }
 
 nz-footer {
