--- a/clients/projects/office/src/assets/scss/_variables.scss
+++ b/clients/projects/office/src/assets/scss/_variables.scss
@@ -21,3 +21,22 @@ $margin-2: $spacing-size-2;
 $margin-3: $spacing-size-3;
 $margin-4: $spacing-size-4;
 $margin-5: $spacing-size-5;
+
+// Media Query Breakpoints
+$screen-xs: 480px;
+$screen-xs-min: $screen-xs;
+$screen-sm: 576px;
+$screen-sm-min: $screen-sm;
+$screen-md: 768px;
+$screen-md-min: $screen-md;
+$screen-lg: 992px;
+$screen-lg-min: $screen-lg;
+$screen-xl: 1200px;
+$screen-xl-min: $screen-xl;
+$screen-xxl: 1600px;
+$screen-xxl-min: $screen-xxl;
+$screen-xs-max: ($screen-sm-min - 1px);
+$screen-sm-max: ($screen-md-min - 1px);
+$screen-md-max: ($screen-lg-min - 1px);
+$screen-lg-max: ($screen-xl-min - 1px);
+$screen-xl-max: ($screen-xxl-min - 1px);
